--- a/r-references.bib
+++ b/r-references.bib
@@ -1,39 +1,36 @@
-@Manual{R-apaTables,
-  title = {apaTables: Create American Psychological Association (APA) Style Tables},
-  author = {David Stanley},
-  year = {2018},
-  note = {R package version 2.0.5},
-  url = {https://CRAN.R-project.org/package=apaTables},
-}
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2019},
+  year = {2020},
   url = {https://www.R-project.org/},
 }
+
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2019},
-  note = {R package version 0.14},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  year = {2020},
+  note = {R package version 0.21},
+  url = {https://github.com/rstudio/bookdown},
 }
+
 @Manual{R-broom,
-  title = {broom: Convert Statistical Analysis Objects into Tidy Tibbles},
-  author = {David Robinson and Alex Hayes},
-  year = {2019},
-  note = {R package version 0.5.2},
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2020},
+  note = {R package version 0.7.2},
   url = {https://CRAN.R-project.org/package=broom},
 }
+
 @Manual{R-car,
   title = {car: Companion to Applied Regression},
   author = {John Fox and Sanford Weisberg and Brad Price},
-  year = {2019},
-  note = {R package version 3.0-4},
+  year = {2020},
+  note = {R package version 3.0-10},
   url = {https://CRAN.R-project.org/package=car},
 }
+
 @Manual{R-coefplot,
   title = {coefplot: Plots Coefficients from Fitted Models},
   author = {Jared P. Lander},
@@ -41,147 +38,170 @@
   note = {R package version 1.2.6},
   url = {https://CRAN.R-project.org/package=coefplot},
 }
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2019},
-  note = {R package version 0.8.3},
+  author = {Hadley Wickham and Romain François and Lionel {
+             Henry} and Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
+
 @Manual{R-effects,
   title = {effects: Effect Displays for Linear, Generalized Linear, and Other Models},
   author = {John Fox and Sanford Weisberg and Brad Price and Michael Friendly and Jangman Hong},
-  year = {2019},
-  note = {R package version 4.1-3},
+  year = {2020},
+  note = {R package version 4.2-0},
   url = {https://CRAN.R-project.org/package=effects},
 }
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani},
-  year = {2019},
-  note = {R package version 3.2.1},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2020},
+  note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
+
 @Manual{R-haven,
-  title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
+  title = {haven: Import and Export SPSS, Stata and SAS Files},
   author = {Hadley Wickham and Evan Miller},
-  year = {2019},
-  note = {R package version 2.1.1},
+  year = {2020},
+  note = {R package version 2.3.1},
   url = {https://CRAN.R-project.org/package=haven},
 }
+
 @Manual{R-httr,
   title = {httr: Tools for Working with URLs and HTTP},
   author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.4.1},
+  year = {2020},
+  note = {R package version 1.4.2},
   url = {https://CRAN.R-project.org/package=httr},
 }
+
 @Manual{R-jsonlite,
-  title = {jsonlite: A Robust, High Performance JSON Parser and Generator for R},
-  author = {Jeroen Ooms and Duncan {Temple Lang} and Lloyd Hilaiel},
-  year = {2018},
-  note = {R package version 1.6},
+  title = {jsonlite: A Simple and Robust JSON Parser and Generator for R},
+  author = {Jeroen Ooms},
+  year = {2020},
+  note = {R package version 1.7.1},
   url = {https://CRAN.R-project.org/package=jsonlite},
 }
+
 @Manual{R-kableExtra,
-  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
   author = {Hao Zhu},
-  year = {2019},
-  note = {R package version 1.1.0},
+  year = {2020},
+  note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=kableExtra},
 }
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2019},
-  note = {R package version 1.25},
-  url = {https://CRAN.R-project.org/package=knitr},
+  year = {2020},
+  note = {R package version 1.30},
+  url = {https://yihui.org/knitr/},
 }
+
 @Manual{R-lavaan,
   title = {lavaan: Latent Variable Analysis},
-  author = {Yves Rosseel and Terrence D. Jorgensen},
-  year = {2019},
-  note = {R package version 0.6-5},
-  url = {https://CRAN.R-project.org/package=lavaan},
+  author = {Yves Rosseel and Terrence D. Jorgensen and Nicholas Rockwood},
+  year = {2020},
+  note = {R package version 0.6-7},
+  url = {http://lavaan.org},
 }
+
 @Manual{R-lme4,
-  title = {lme4: Linear Mixed-Effects Models using 'Eigen' and S4},
+  title = {lme4: Linear Mixed-Effects Models using Eigen and S4},
   author = {Douglas Bates and Martin Maechler and Ben Bolker and Steven Walker},
-  year = {2019},
-  note = {R package version 1.1-21},
-  url = {https://CRAN.R-project.org/package=lme4},
+  year = {2020},
+  note = {R package version 1.1-25},
+  url = {https://github.com/lme4/lme4/},
 }
+
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
-  year = {2018},
-  note = {R package version 1.7.4},
+  year = {2020},
+  note = {R package version 1.7.9.2},
   url = {https://CRAN.R-project.org/package=lubridate},
 }
+
 @Manual{R-mediation,
   title = {mediation: Causal Mediation Analysis},
   author = {Dustin Tingley and Teppei Yamamoto and Kentaro Hirose and Luke Keele and Kosuke Imai and Minh Trinh and Weihuang Wong},
   year = {2019},
   note = {R package version 4.5.0},
-  url = {https://CRAN.R-project.org/package=mediation},
+  url = {https://imai.princeton.edu/projects/mechanisms.html},
 }
+
 @Manual{R-nlme,
   title = {nlme: Linear and Nonlinear Mixed Effects Models},
   author = {José Pinheiro and Douglas Bates and {R-core}},
-  year = {2019},
-  note = {R package version 3.1-141},
-  url = {https://CRAN.R-project.org/package=nlme},
+  year = {2020},
+  note = {R package version 3.1-149},
+  url = {https://svn.r-project.org/R-packages/trunk/nlme/},
 }
+
 @Manual{R-OpenMx,
   title = {OpenMx: Extended Structural Equation Modelling},
   author = {Steven M. Boker and Michael C. Neale and Hermine H. Maes and Michael Spiegel and Timothy R. Brick and Ryne Estabrook and Timothy C. Bates and Ross J. Gore and Michael D. Hunter and Joshua N. Pritikin and Mahsa Zahery and Robert M. Kirkpatrick},
-  year = {2019},
-  note = {R package version 2.14.11},
+  year = {2020},
+  note = {R package version 2.18.1},
   url = {https://CRAN.R-project.org/package=OpenMx},
 }
+
 @Manual{R-papaja,
   title = {papaja: Prepare reproducible APA journal articles with R Markdown},
   author = {Frederik Aust and Marius Barth},
-  year = {2019},
-  note = {R package version 0.1.0.9842},
+  year = {2020},
+  note = {R package version 0.1.0.9997},
   url = {https://github.com/crsh/papaja},
 }
+
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
   author = {William Revelle},
-  year = {2019},
-  note = {R package version 1.8.12},
-  url = {https://CRAN.R-project.org/package=psych},
+  year = {2020},
+  note = {R package version 2.0.9},
+  url = {https://personality-project.org/r/psych/
+https://personality-project.org/r/psych-manual.pdf},
 }
+
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester and Romain Francois},
-  year = {2018},
-  note = {R package version 1.3.1},
+  author = {Hadley Wickham and Jim Hester},
+  year = {2020},
+  note = {R package version 1.4.0},
   url = {https://CRAN.R-project.org/package=readr},
 }
+
 @Manual{R-rstanarm,
   title = {rstanarm: Bayesian Applied Regression Modeling via Stan},
   author = {Jonah Gabry and Ben Goodrich},
-  year = {2019},
-  note = {R package version 2.19.2},
+  year = {2020},
+  note = {R package version 2.21.1},
   url = {https://CRAN.R-project.org/package=rstanarm},
 }
+
 @Manual{R-rvest,
   title = {rvest: Easily Harvest (Scrape) Web Pages},
   author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 0.3.4},
+  year = {2020},
+  note = {R package version 0.3.6},
   url = {https://CRAN.R-project.org/package=rvest},
 }
+
 @Manual{R-sem,
   title = {sem: Structural Equation Models},
   author = {John Fox and Zhenghua Nie and Jarrett Byrnes},
-  year = {2017},
-  note = {R package version 3.1-9},
+  year = {2020},
+  note = {R package version 3.1-11},
   url = {https://CRAN.R-project.org/package=sem},
 }
+
 @Manual{R-stargazer,
   title = {stargazer: Well-Formatted Regression and Summary Statistics Tables},
   author = {Marek Hlavac},
@@ -189,39 +209,323 @@ Research},
   note = {R package version 5.2.2},
   url = {https://CRAN.R-project.org/package=stargazer},
 }
+
 @Manual{R-texreg,
   title = {texreg: Conversion of R Regression Output to LaTeX or HTML Tables},
   author = {Philip Leifeld},
-  year = {2017},
-  note = {R package version 1.36.23},
-  url = {https://CRAN.R-project.org/package=texreg},
+  year = {2020},
+  note = {R package version 1.37.5},
+  url = {http://github.com/leifeld/texreg/},
 }
+
 @Manual{R-tidyverse,
-  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
+  title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2017},
-  note = {R package version 1.2.1},
+  year = {2019},
+  note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
+
 @Manual{R-visreg,
   title = {visreg: Visualization of Regression Models},
   author = {Patrick Breheny and Woodrow Burchett},
-  year = {2019},
-  note = {R package version 2.5-1},
+  year = {2020},
+  note = {R package version 2.7.0},
   url = {http://pbreheny.github.io/visreg},
 }
+
+@Book{bookdown2016,
+  title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2016},
+  note = {ISBN 978-1138700109},
+  url = {https://github.com/rstudio/bookdown},
+}
+
+@Book{car2019,
+  title = {An {R} Companion to Applied Regression},
+  edition = {Third},
+  author = {John Fox and Sanford Weisberg},
+  year = {2019},
+  publisher = {Sage},
+  address = {Thousand Oaks {CA}},
+  url = {https://socialsciences.mcmaster.ca/jfox/Books/Companion/},
+}
+
+@Book{effects2019,
+  title = {An R Companion to Applied Regression},
+  edition = {3rd},
+  author = {John Fox and Sanford Weisberg},
+  year = {2019},
+  publisher = {Sage},
+  address = {Thousand Oaks CA},
+  url = {https://socialsciences.mcmaster.ca/jfox/Books/Companion/index.html},
+}
+
+@Article{effects2018,
+  title = {Visualizing Fit and Lack of Fit in Complex Regression Models with Predictor Effect Plots and Partial Residuals},
+  author = {John Fox and Sanford Weisberg},
+  journal = {Journal of Statistical Software},
+  year = {2018},
+  volume = {87},
+  number = {9},
+  pages = {1--27},
+  doi = {10.18637/jss.v087.i09},
+  url = {https://www.jstatsoft.org/article/view/v087i09},
+}
+
+@Article{effects2003,
+  title = {Effect Displays in {R} for Generalised Linear Models},
+  author = {John Fox},
+  journal = {Journal of Statistical Software},
+  year = {2003},
+  volume = {8},
+  number = {15},
+  pages = {1--27},
+  url = {https://www.jstatsoft.org/article/view/v008i15},
+}
+
+@Article{effects2009,
+  title = {Effect Displays in {R} for Multinomial and Proportional-Odds Logit Models: Extensions to the {effects} Package},
+  author = {John Fox and Jangman Hong},
+  journal = {Journal of Statistical Software},
+  year = {2009},
+  volume = {32},
+  number = {1},
+  pages = {1--24},
+  url = {https://www.jstatsoft.org/article/view/v032i01},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
+@Article{jsonlite2014,
+  title = {The jsonlite Package: A Practical and Consistent Mapping Between JSON Data and R Objects},
+  author = {Jeroen Ooms},
+  journal = {arXiv:1403.2805 [stat.CO]},
+  year = {2014},
+  url = {https://arxiv.org/abs/1403.2805},
+}
+
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
+}
+
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Article{lavaan2012,
+  title = {{lavaan}: An {R} Package for Structural Equation Modeling},
+  author = {Yves Rosseel},
+  journal = {Journal of Statistical Software},
+  year = {2012},
+  volume = {48},
+  number = {2},
+  pages = {1--36},
+  url = {http://www.jstatsoft.org/v48/i02/},
+}
+
+@Article{lme42015,
+  title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+  author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
+  journal = {Journal of Statistical Software},
+  year = {2015},
+  volume = {67},
+  number = {1},
+  pages = {1--48},
+  doi = {10.18637/jss.v067.i01},
+}
+
+@Article{lubridate2011,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/},
+}
+
+@Article{mediation2014a,
+  title = {{mediation}: {R} Package for Causal Mediation Analysis},
+  author = {Dustin Tingley and Teppei Yamamoto and Kentaro Hirose and Luke Keele and Kosuke Imai},
+  journal = {Journal of Statistical Software},
+  year = {2014},
+  volume = {59},
+  number = {5},
+  pages = {1--38},
+  url = {http://www.jstatsoft.org/v59/i05/},
+}
+
+@Article{mediation2010a,
+  title = {Identification, Inference, and Sensitivity Analysis for Causal Mediation Effects},
+  author = {Kosuke Imai and Luke Keele and Teppei Yamamoto},
+  journal = {Statistical Science},
+  year = {2010},
+  volume = {25},
+  number = {1},
+  pages = {51--71},
+  url = {http://imai.princeton.edu/research/mediation.html},
+}
+
+@Article{mediation2010b,
+  title = {A General Approach to Causal Mediation Analysis},
+  author = {Kosuke Imai and Luke Keele and Dustin Tingley},
+  journal = {Psychological Methods},
+  year = {2010},
+  volume = {15},
+  number = {4},
+  pages = {309--334},
+  url = {http://imai.princeton.edu/research/BaronKenny.html},
+}
+
+@Article{mediation2011a,
+  title = {Unpacking the Black Box of Causality: Learning about Causal Mechanisms from Experimental and Observational Studies},
+  author = {Kosuke Imai and Luke Keele and Dustin Tingley and Teppei Yamamoto},
+  journal = {American Political Science Review},
+  year = {2011},
+  volume = {105},
+  number = {4},
+  pages = {765--789},
+  url = {http://imai.princeton.edu/research/mediationP.html},
+}
+
+@Article{mediation2013a,
+  title = {Identification and Sensitivity Analysis for Multiple Causal Mechanisms: Revisiting Evidence from Framing Experiments},
+  author = {Kosuke Imai and Teppei Yamamoto},
+  journal = {Political Analysis},
+  year = {2013},
+  volume = {21},
+  number = {2},
+  pages = {141--171},
+  url = {http://imai.princeton.edu/research/medsens.html},
+}
+
+@InCollection{mediation2010c,
+  title = {Causal Mediation Analysis Using R},
+  author = {Kosuke Imai and Luke Keele and Dustin Tingley and Teppei Yamamoto},
+  booktitle = {Advances in Social Science Research Using R},
+  year = {2010},
+  editor = {H. D. Vinod},
+  publisher = {Springer-Verlag},
+  address = {New York},
+}
+
+@Article{OpenMx2016,
+  title = {Open{M}x 2.0: {E}xtended structural equation and statistical modeling},
+  author = {Michael C. Neale and Michael D. Hunter and Joshua N. Pritikin and Mahsa Zahery and Timothy R. Brick and Robert M. Kirkpatrick and Ryne Estabrook and Timothy C. Bates and Hermine H. Maes and Steven M. Boker},
+  journal = {Psychometrika},
+  publisher = {Psychometric Society},
+  year = {2016},
+  volume = {81},
+  number = {2},
+  pages = {535-549},
+  doi = {10.1007/s11336-014-9435-8},
+}
+
+@Article{OpenMx2015,
+  title = {Modular open-source software for {I}tem {F}actor {A}nalysis},
+  author = {Joshua N. Pritikin and Michael D. Hunter and Steven M. Boker},
+  journal = {Educational and Psychological Measurement},
+  year = {2015},
+  volume = {75},
+  number = {3},
+  pages = {458-474},
+}
+
+@Article{OpenMx2018,
+  title = {State Space Modeling in an Open Source, Modular, Structural Equation Modeling Environment},
+  author = {Michael D. Hunter},
+  journal = {Structural Equation Modeling},
+  year = {2018},
+  volume = {25},
+  number = {2},
+  pages = {307-324},
+  doi = {10.1080/10705511.2017.1369354},
+}
+
+@Manual{OpenMx2020,
+  title = {OpenMx 2.18.1 User Guide},
+  year = {2020},
+  author = {Steven M. Boker and Michael C. Neale and Hermine H. Maes and Michael J. Wilde and Michael Spiegel and Timothy R. Brick and Ryne Estabrook and Timothy C. Bates and Paras Mehta and Timo {von Oertzen} and Ross J. Gore and Michael D. Hunter and Daniel C. Hackett and Julian Karch and Andreas M. Brandmaier and Joshua N. Pritikin and Mahsa Zahery and Robert M. Kirkpatrick and Yang Wang and Ben Goodrich and Charles Driver and {Massachusetts Institute of Technology} and S. G. Johnson and {Association for Computing Machinery} and Dieter Kraft and Stefan Wilhelm and Sarah Medland and Carl F. Falk and Matt Keller and {Manjunath B G} and {The Regents of the University of California} and Lester Ingber and Wong {Shao Voon} and Juan Palacios and Jiang Yang and Gael Guennebaud and Jitse Niesen},
+}
+
+@Misc{rstanarm2018,
+  title = {Joint longitudinal and time-to-event models via {Stan}.},
+  author = {SL Brilleman and MJ Crowther and M Moreno-Betancur and J {Buros Novik} and R Wolfe},
+  note = {StanCon 2018. 10-12 Jan 2018. Pacific Grove, CA, USA.},
+  url = {https://github.com/stan-dev/stancon_talks/},
+  year = {2018},
+}
+
+@Article{texreg2013,
+  title = {{texreg}: Conversion of Statistical Model Output in {R} to {\LaTeX} and {HTML} Tables},
+  author = {Philip Leifeld},
+  journal = {Journal of Statistical Software},
+  year = {2013},
+  volume = {55},
+  number = {8},
+  pages = {1--24},
+  url = {http://dx.doi.org/10.18637/jss.v055.i08},
+}
+
+@Article{tidyverse2019,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
+}
+
+@Article{visreg2017,
+  author = {Patrick Breheny and Woodrow Burchett},
+  title = {Visualization of Regression Models Using visreg},
+  journal = {The R Journal},
+  year = {2017},
+  volume = {9},
+  pages = {56--71},
+  number = {2},
+}
+
 @Manual{R-carData,
   title = {carData: Companion to Applied Regression Data Sets},
   author = {John Fox and Sanford Weisberg and Brad Price},
-  year = {2018},
-  note = {R package version 3.0-2},
+  year = {2020},
+  note = {R package version 3.0-4},
   url = {https://CRAN.R-project.org/package=carData},
 }
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 0.4.0},
+  year = {2020},
+  note = {R package version 0.5.0},
   url = {https://CRAN.R-project.org/package=forcats},
 }
 @Book{R-MASS,
@@ -232,13 +536,13 @@ Research},
   address = {New York},
   year = {2002},
   note = {ISBN 0-387-95457-0},
-  url = {http://www.stats.ox.ac.uk/pub/MASS4},
+  url = {http://www.stats.ox.ac.uk/pub/MASS4/},
 }
 @Manual{R-Matrix,
   title = {Matrix: Sparse and Dense Matrix Classes and Methods},
   author = {Douglas Bates and Martin Maechler},
   year = {2019},
-  note = {R package version 1.2-17},
+  note = {R package version 1.2-18},
   url = {https://CRAN.R-project.org/package=Matrix},
 }
 @Book{R-mvtnorm,
@@ -253,11 +557,21 @@ Research},
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
-  year = {2019},
-  note = {R package version 0.3.3},
+  year = {2020},
+  note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 @Article{R-sandwich_a,
+  title = {Various Versatile Variances: An Object-Oriented Implementation of Clustered Covariances in {R}},
+  author = {Achim Zeileis and Susanne K\"oll and Nathaniel Graham},
+  journal = {Journal of Statistical Software},
+  year = {2020},
+  volume = {95},
+  number = {1},
+  pages = {1--36},
+  doi = {10.18637/jss.v095.i01},
+}
+@Article{R-sandwich_b,
   title = {Econometric Computing with {HC} and {HAC} Covariance Matrix Estimators},
   author = {Achim Zeileis},
   journal = {Journal of Statistical Software},
@@ -267,7 +581,7 @@ Research},
   pages = {1--17},
   doi = {10.18637/jss.v011.i10},
 }
-@Article{R-sandwich_b,
+@Article{R-sandwich_c,
   title = {Object-Oriented Computation of Sandwich Estimators},
   author = {Achim Zeileis},
   journal = {Journal of Statistical Software},
@@ -287,14 +601,14 @@ Research},
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2019},
-  note = {R package version 2.1.3},
+  year = {2020},
+  note = {R package version 3.0.4},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Lionel Henry},
-  year = {2019},
-  note = {R package version 1.0.0},
+  author = {Hadley Wickham},
+  year = {2020},
+  note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
